--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,8 @@
 .App {
+  background-color: #fff!important;
+  min-height: 550px;
   text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+  transition: ease all 0.3s;
 }
 
 .App-header {
